<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/recipe_image_view_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_hundred_eighty_density_pixel"
            android:layout_margin="@dimen/ten_density_pixel"
            android:padding="@dimen/five_density_pixel"
            android:gravity="center"
            android:background="@drawable/border_view_rectangle">

        <ImageView
                android:id="@+id/recipe_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/ic_menu_camera" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/recipe_information_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twenty_density_pixel">

        <TextView
                android:id="@+id/recipe_ingredients_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/recipe_ingredients_header"/>

        <TextView
                android:id="@+id/recipe_view_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <TextView
                android:id="@+id/recipe_method_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_density_pixel"
                android:textStyle="bold"
                android:text="@string/recipe_method_header"/>

        <TextView
                android:id="@+id/recipe_view_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <TextView
                android:id="@+id/recipe_notes_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_density_pixel"
                android:textStyle="bold"
                android:text="@string/recipe_notes_header"/>

        <TextView
                android:id="@+id/recipe_view_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>