<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/single_recipe_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.vchohan.cookbook.SingleRecipeActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <!-- single recipe image container-->
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center">

            <ImageView
                    android:id="@+id/single_recipe_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true" />

        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/twenty_density_pixel">

            <!-- single recipe ingredients container-->
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/ten_density_pixel">

                <TextView
                        android:id="@+id/single_recipe_ingredients_header"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/recipe_ingredients_header"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/single_recipe_ingredients"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/ten_density_pixel" />

            </LinearLayout>

            <!-- single recipe method container-->
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/ten_density_pixel">

                <TextView
                        android:id="@+id/single_recipe_method_header"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/recipe_method_header"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/single_recipe_method"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/ten_density_pixel" />

            </LinearLayout>

            <!-- single recipe notes container-->
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/ten_density_pixel">

                <TextView
                        android:id="@+id/single_recipe_notes_header"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/recipe_notes_header"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/single_recipe_notes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/ten_density_pixel" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
