<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/register_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:context="com.vchohan.cookbook.RegisterActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:layout_above="@+id/register_submit_button">

        <!-- register form -->
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/twenty_density_pixel"
                android:layout_weight="1">

            <!-- register username container -->
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/ten_density_pixel"
                    android:gravity="center"
                    android:background="@drawable/border_view_rectangle">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/ten_density_pixel"
                        android:background="@color/colorIndigo300"
                        android:src="@drawable/ic_account_box_white_24dp" />

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/five_density_pixel">

                    <AutoCompleteTextView
                            android:id="@+id/register_user_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/ten_density_pixel"
                            android:hint="Username"
                            android:inputType="textPersonName"
                            android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <!-- register email container -->
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/ten_density_pixel"
                    android:gravity="center"
                    android:background="@drawable/border_view_rectangle">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/ten_density_pixel"
                        android:background="@color/colorIndigo300"
                        android:src="@drawable/ic_email_white_24dp" />

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/five_density_pixel">

                    <AutoCompleteTextView
                            android:id="@+id/register_user_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/ten_density_pixel"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <!-- register password container -->
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/ten_density_pixel"
                    android:gravity="center"
                    android:background="@drawable/border_view_rectangle">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/ten_density_pixel"
                        android:background="@color/colorIndigo300"
                        android:src="@drawable/ic_vpn_key_white_24dp" />

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/five_density_pixel">

                    <EditText
                            android:id="@+id/register_user_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/ten_density_pixel"
                            android:hint="@string/prompt_password"
                            android:inputType="textPassword"
                            android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <!-- register button container -->
    <LinearLayout
            android:id="@+id/register_submit_button"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

        <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:background="@color/colorIndigo500"
                android:layout_alignParentBottom="true" />

    </LinearLayout>

</RelativeLayout>
